update fix task & additional Debugging

--- a/Practice-2/Pham_Dinh_Phu/WordPress/files/apache.conf.j2
+++ b/Practice-2/Pham_Dinh_Phu/WordPress/files/apache.conf.j2
@@ -7,7 +7,9 @@
    CustomLog /var/log/apache2/access.log combined
 
    <Directory /var/www/{{ http_host }}/wordpress>   
-         Options -Indexes
+         Options -Indexes FollowSymLinks
+         AllowOverride all  
+         Require all granted  
    </Directory>
 
    <IfModule mod_dir.c>
